--- a/MagnetBarView/MagnetBarView/Present/ReviewView/Cell/MagnetReviewCell.xib
+++ b/MagnetBarView/MagnetBarView/Present/ReviewView/Cell/MagnetReviewCell.xib
@@ -10,39 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="645" id="KGk-i7-Jjw" customClass="MagnetReviewCell" customModule="MagnetBarView" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="457" height="645"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="672" id="KGk-i7-Jjw" customClass="MagnetReviewCell" customModule="MagnetBarView" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="458" height="672"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="457" height="645"/>
+                <rect key="frame" x="0.0" y="0.0" width="458" height="672"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXZ-vj-L98">
-                        <rect key="frame" x="20" y="10" width="84" height="21"/>
+                        <rect key="frame" x="20" y="20" width="84" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="★★★★★" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gdd-cc-PaB">
-                        <rect key="frame" x="20" y="36" width="85" height="21"/>
+                        <rect key="frame" x="20" y="46" width="85" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" systemColor="systemYellowColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ip0-1T-vkN">
-                        <rect key="frame" x="120" y="36" width="30" height="21"/>
+                        <rect key="frame" x="120" y="46" width="30" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W4A-2h-PTK">
-                        <rect key="frame" x="20" y="62" width="417" height="557.5"/>
+                        <rect key="frame" x="20" y="72" width="418" height="557.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="557.5" id="MQU-We-PEC"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwR-b9-rUZ">
-                        <rect key="frame" x="20" y="624.5" width="417" height="20.5"/>
+                        <rect key="frame" x="20" y="634.5" width="418" height="20.5"/>
                         <constraints>
                             <constraint firstAttribute="height" priority="250" constant="154" id="Bxs-qV-Xl3"/>
                         </constraints>
@@ -57,9 +57,9 @@
                     <constraint firstItem="xwR-b9-rUZ" firstAttribute="top" secondItem="W4A-2h-PTK" secondAttribute="bottom" constant="5" id="OtY-tw-yzR"/>
                     <constraint firstItem="W4A-2h-PTK" firstAttribute="leading" secondItem="SXZ-vj-L98" secondAttribute="leading" id="XXX-1c-9Wm"/>
                     <constraint firstItem="Ip0-1T-vkN" firstAttribute="top" secondItem="Gdd-cc-PaB" secondAttribute="top" id="YWQ-Wt-ELs"/>
-                    <constraint firstAttribute="bottom" secondItem="xwR-b9-rUZ" secondAttribute="bottom" priority="249" id="fSM-NH-OST"/>
+                    <constraint firstAttribute="bottom" secondItem="xwR-b9-rUZ" secondAttribute="bottom" priority="249" constant="20" id="fSM-NH-OST"/>
                     <constraint firstItem="Gdd-cc-PaB" firstAttribute="top" secondItem="SXZ-vj-L98" secondAttribute="bottom" constant="5" id="kRa-Yr-cvg"/>
-                    <constraint firstItem="SXZ-vj-L98" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="kVU-YH-Oug"/>
+                    <constraint firstItem="SXZ-vj-L98" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="kVU-YH-Oug"/>
                     <constraint firstItem="W4A-2h-PTK" firstAttribute="top" secondItem="Gdd-cc-PaB" secondAttribute="bottom" constant="5" id="mAm-j2-5Le"/>
                     <constraint firstItem="xwR-b9-rUZ" firstAttribute="trailing" secondItem="W4A-2h-PTK" secondAttribute="trailing" id="nxM-nU-Oab"/>
                     <constraint firstItem="xwR-b9-rUZ" firstAttribute="leading" secondItem="SXZ-vj-L98" secondAttribute="leading" id="s48-Vt-2EP"/>
@@ -76,7 +76,7 @@
                 <outlet property="ratingLabel" destination="Gdd-cc-PaB" id="oLm-fz-VED"/>
                 <outlet property="reviewLabel" destination="xwR-b9-rUZ" id="Qtc-qA-sWp"/>
             </connections>
-            <point key="canvasLocation" x="-144.20289855072465" y="156.36160714285714"/>
+            <point key="canvasLocation" x="-143.47826086956522" y="164.73214285714286"/>
         </tableViewCell>
     </objects>
     <resources>
